--- a/backend/src/main/resources/templates/user-home.html
+++ b/backend/src/main/resources/templates/user-home.html
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="inner-head">
-                    <h2>Phòng Trọ</h2>
+                    <h2>Bài Đăng</h2>
                 </div>
             </div>
         </div>
