--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -192,7 +192,7 @@
         <div class="card col-xl-4 col-lg-6 col-12" th:each="post :${posts}">
           <div class="inner-box">
             <div class="inner-img" th:if="${post.listImages != null and !post.listImages.isEmpty()}">
-              <img th:src="@{'/' + ${post.listImages[0].url}}" alt="Image Description" class="image">
+              <img th:src="@{'/image/' + ${post.listImages[0].url}}" alt="Image Description" class="image">
             </div>
             <p class="inner-title text-center" th:text="${post.title}"></p>
             <div class="inner-location">
