--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -203,7 +203,7 @@
               </a>
             </div>
             <div class="inner-bot">
-              <p class="inner-price" th:text="${post.price}"></p>
+              <p><span th:text="${#numbers.formatDecimal(post.price, 0, 'COMMA', 0, 'POINT')}"></span>VND</p>
               <a th:href="@{/login}" class="btn">Xem Phòng</a>
             </div>
           </div>
@@ -284,11 +284,6 @@
                 <p class="inner-desc">
                   TNNA - Công ty hỗ trợ dịch vụ tìm kiếm Phòng trọ và Chung cư
                 </p>
-                <form action="">
-                  <input type="text" class="form-control"
-                         placeholder="Nhập số điện thoại của bạn để được tư vấn">
-                  <button>Đăng kí</button>
-                </form>
               </div>
             </div>
           </div>
