--- a/backend/src/main/resources/templates/admin-profile.html
+++ b/backend/src/main/resources/templates/admin-profile.html
@@ -39,7 +39,7 @@
                     <div class="user-dropdown">
                         <div class="dropdown-toggle">
                             <i class="fa-solid fa-user"></i>
-                            <span th:text="${user.email}">Tên Người Dùng</span>
+                            <span th:text="${user.fullName}">Tên Người Dùng</span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
                         <ul class="dropdown-menu">
