--- a/backend/src/main/resources/templates/contact.html
+++ b/backend/src/main/resources/templates/contact.html
@@ -51,10 +51,10 @@
               <li><a th:href="@{/contact}">Liên Hệ</a></li>
             </ul>
           </div>
-          <div th:if="${email != null}" class="user-dropdown">
+          <div th:if="${name != null}" class="user-dropdown">
             <div class="dropdown-toggle">
               <i class="fa-solid fa-user"></i>
-              <span th:text="${email}"></span>
+              <span th:text="${name}"></span>
               <i class="fa-solid fa-chevron-down"></i>
             </div>
             <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
               </li>
             </ul>
           </div>
-          <div th:unless="${email != null}" class="inner-action">
+          <div th:unless="${name != null}" class="inner-action">
             <a th:href="@{/login}" class="btn-action">Đăng Nhập</a>
           </div>
           <div class="inner-menu-mb">
