--- a/backend/src/main/resources/templates/introduce.html
+++ b/backend/src/main/resources/templates/introduce.html
@@ -57,10 +57,10 @@
                             <li><a th:href="@{/contact}">Liên Hệ</a></li>
                         </ul>
                     </div>
-                    <div th:if="${email != null}" class="user-dropdown">
+                    <div th:if="${name != null}" class="user-dropdown">
                         <div class="dropdown-toggle">
                             <i class="fa-solid fa-user"></i>
-                            <span th:text="${email}"></span>
+                            <span th:text="${name}"></span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
                         <ul class="dropdown-menu">
@@ -73,7 +73,7 @@
                         </ul>
                     </div>
 
-                    <div th:unless="${email != null}" class="inner-action">
+                    <div th:unless="${name != null}" class="inner-action">
                         <a th:href="@{/login}" class="btn-action">Đăng Nhập</a>
                     </div>
                     <div class="inner-menu-mb">
