--- a/backend/src/main/resources/templates/post-management.html
+++ b/backend/src/main/resources/templates/post-management.html
@@ -38,7 +38,7 @@
           <div class="user-dropdown">
             <div class="dropdown-toggle">
               <i class="fa-solid fa-user"></i>
-              <span th:text="${email}"></span>
+              <span th:text="${name}"></span>
               <i class="fa-solid fa-chevron-down"></i>
             </div>
             <ul class="dropdown-menu">
