--- a/backend/src/main/resources/templates/user-home.html
+++ b/backend/src/main/resources/templates/user-home.html
@@ -40,7 +40,7 @@
                     <div class="user-dropdown">
                         <div class="dropdown-toggle">
                             <i class="fa-solid fa-user"></i>
-                            <span th:text="${email}">Tên Người Dùng</span>
+                            <span th:text="${name}">Tên Người Dùng</span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
                         <ul class="dropdown-menu">
@@ -209,7 +209,7 @@
                             </a>
                         </div>
                         <div class="inner-bot">
-                            <p class="inner-price" th:text="${post.price}"></p>
+                            <p><span th:text="${#numbers.formatDecimal(post.price, 0, 'COMMA', 0, 'POINT')}"></span>VND</p>
                             <a th:href="@{/post/detail/{id}(id=${post.id})}" class="btn">Xem Phòng</a>
                         </div>
                     </div>
