--- a/backend/src/main/resources/templates/postdetail.html
+++ b/backend/src/main/resources/templates/postdetail.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="${post.title}"></title>
   <link rel="icon" type="image/x-icon" th:href="@{/image/android-chrome-512x512.png}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css}"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200"/>
+  <link rel="stylesheet" href= "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200"/>
   <link rel="stylesheet" th:href="@{/bootstrap/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{/css/base.css}">
   <link rel="stylesheet" th:href="@{/css/postdetail.css}">
@@ -59,7 +58,7 @@
           <div class="user-dropdown">
             <div class="dropdown-toggle">
               <i class="fa-solid fa-user"></i>
-              <span th:text="${email}">Tên Người Dùng</span>
+              <span th:text="${name}">Tên Người Dùng</span>
               <i class="fa-solid fa-chevron-down"></i>
             </div>
             <ul class="dropdown-menu">
